2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Report.pm (gdt): Remove code dealing with a
	'translated_paragraph' argument.  Condense code dealing
	with subroutine arguments to a single line.

2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Remove check for UTF-8 locale 
	that runs "locale -a".
	xspara_init in tp/Texinfo/Convert/XSParagraph/xspara.c does its 
	own check which should be enough.

2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS.pm: Remove check for UTF-8 locale, as
	"locale -a" can be slow to run (about 4.5 seconds on my computer 
	after disk caches are cleared), and tp/Texinfo/MiscXS/misc.c may
	not need it.  (Reverses change on 2017-03-12.)

2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.3.92
	* configure.ac: Update version.

2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (find_node_from_tag): Remove some unused 
	variables.

2017-06-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	* tp/Texinfo/Convert/XSParagraph/Makefile.am,
	* tp/Texinfo/MiscXS/configure.ac,
	* tp/Texinfo/MiscXS/Makefile.am:
	Change name of conditional from HOST_IS_WINDOWS to 
	HOST_NEEDS_NO_UNDEFINED.  Suggestion from Ken Brown.

2017-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* Texinfo/Convert/XSParagraph/configure.ac,
	* Texinfo/MiscXS/configure.ac: Check for cygwin when setting 
	HOST_IS_WINDOWS conditional.

2017-06-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	* tp/Texinfo/MiscXS/configure.ac: Copy code for HOST_IS_WINDOWS
	Automake conditional from top-level configure.ac.

	* tp/Texinfo/MiscXS/Makefile.am,
	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Only put 
	-no-undefined -lperl in AM_FLAGS on MS-Windows systems.
	Li Er reported that linking against libperl is not necessary,
	and it won't work if perl is not built with a shared libperl